新增员工管理系统后端核心功能及相关模块。