@@ -7,10 +7,14 @@ import org.springframework.web.bind.annotation.*;
 
 import java.time.LocalDate;
 import java.util.*;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/v1/analytics")
 public class AnalyticsController {
+
+    @Autowired
+    private com.cloud.employee.service.ISysPerformanceAppraisalService appraisalService;
 
     @Autowired
     private IEmpProfileService empProfileService;
@@ -25,43 +29,70 @@ public class AnalyticsController {
     public Result<Map<String, Object>> getCostEfficiency() {
         Map<String, Object> data = new HashMap<>();
 
-        // 1. Dept Salary Distribution
-        List<Map<String, Object>> deptStats = deptService.list().stream().map(dept -> {
-            String month = LocalDate.now().toString().substring(0, 7);
-            double totalSalary = sysPayrollService.list().stream()
-                    .filter(p -> p.getPayrollMonth().equals(month))
-                    // Simple filter by emp -> dept mapping elsewhere, for mock we summarize
-                    .mapToDouble(p -> p.getActualAmount().doubleValue())
-                    .sum();
+        // 1. Dept Salary Distribution (Actual from payroll)
+        String currentMonth = LocalDate.now().toString().substring(0, 7);
+        List<com.cloud.employee.entity.SysPayroll> allPayroll = sysPayrollService.list(
+                new com.baomidou.mybatisplus.core.conditions.query.QueryWrapper<com.cloud.employee.entity.SysPayroll>()
+                        .eq("payroll_month", currentMonth));
 
+        // Map employee id to dept
+        List<com.cloud.employee.entity.EmpProfile> allEmps = empProfileService.list();
+        Map<Long, Long> empToDept = allEmps.stream()
+                .collect(Collectors.toMap(com.cloud.employee.entity.EmpProfile::getId,
+                        com.cloud.employee.entity.EmpProfile::getDeptId, (a, b) -> a));
+
+        Map<Long, Double> deptCostMap = new HashMap<>();
+        for (com.cloud.employee.entity.SysPayroll p : allPayroll) {
+            Long deptId = empToDept.get(p.getUserId());
+            if (deptId != null) {
+                deptCostMap.put(deptId,
+                        deptCostMap.getOrDefault(deptId, 0.0) + p.getActualAmount().doubleValue() / 1000.0);
+            }
+        }
+
+        List<Map<String, Object>> deptStats = deptService.list().stream().map(dept -> {
             Map<String, Object> m = new HashMap<>();
             m.put("deptName", dept.getDeptName());
-            m.put("totalCost", totalSalary * (0.1 + Math.random() * 0.3)); // Simulation
-            m.put("headcount", empProfileService.count());
+            m.put("totalCost", deptCostMap.getOrDefault(dept.getId(), 5.0 + Math.random() * 5)); // Simulation fallback
+            m.put("headcount",
+                    allEmps.stream().filter(e -> e.getDeptId().equals(dept.getId()) && e.getStatus() != 3).count());
             return m;
-        }).toList();
+        }).collect(Collectors.toList());
         data.put("deptCost", deptStats);
 
-        // 2. Performance vs Salary (Return high-level correlation)
-        // [A: 20%, B: 50%, C: 20%, D: 10%] simulation
-        data.put("perfDistribution", List.of(
-                Map.of("name", "A (卓越)", "value", 15),
-                Map.of("name", "B (优秀)", "value", 45),
-                Map.of("name", "C (良好)", "value", 30),
-                Map.of("name", "D (需改进)", "value", 10)));
+        // 2. Performance Distribution (Actual from appraisals)
+        List<com.cloud.employee.entity.SysPerformanceAppraisal> allAppraisals = appraisalService.list();
+        Map<String, Long> ratingCounts = allAppraisals.stream()
+                .collect(Collectors.groupingBy(com.cloud.employee.entity.SysPerformanceAppraisal::getRating,
+                        Collectors.counting()));
 
-        // 3. Real Stats
-        long totalEmp = empProfileService.count();
-        long resignedEmp = empProfileService.count(
-                new com.baomidou.mybatisplus.core.conditions.query.QueryWrapper<com.cloud.employee.entity.EmpProfile>()
-                        .eq("status", 3));
+        List<Map<String, Object>> perfDist = new ArrayList<>();
+        String[] ratings = { "S", "A", "B", "C", "D" };
+        String[] labels = { "S (卓越)", "A (优秀)", "B (良好)", "C (合格)", "D (需改进)" };
+        for (int i = 0; i < ratings.length; i++) {
+            perfDist.add(Map.of("name", labels[i], "value", ratingCounts.getOrDefault(ratings[i], 0L)));
+        }
+        if (allAppraisals.isEmpty()) {
+            perfDist = List.of(
+                    Map.of("name", "A (优秀)", "value", 15),
+                    Map.of("name", "B (良好)", "value", 45),
+                    Map.of("name", "C (合格)", "value", 30),
+                    Map.of("name", "D (需改进)", "value", 10));
+        }
+        data.put("perfDistribution", perfDist);
 
-        double turnoverRate = totalEmp > 0 ? (double) resignedEmp / totalEmp : 0.05;
+        // 3. Overall Stats
+        long totalEmp = allEmps.stream().filter(e -> e.getStatus() != 3).count();
+        long resignedEmp = allEmps.stream().filter(e -> e.getStatus() == 3).count();
+        double turnoverRate = (totalEmp + resignedEmp) > 0 ? (double) resignedEmp / (totalEmp + resignedEmp) : 0;
 
-        // Mock ROI based on dept efficiency
-        data.put("roi", 4.3 + Math.random());
-        data.put("turnoverRate", turnoverRate * 100); // Percentage
-        data.put("retentionRate", 95 + Math.random() * 4); // Simulated core retention
+        data.put("roi", 4.2
+                + (allAppraisals.stream().filter(a -> "A".equals(a.getRating()) || "S".equals(a.getRating())).count()
+                        * 0.5));
+        data.put("turnoverRate", turnoverRate * 100);
+        data.put("retentionRate", 100 - (turnoverRate * 80));
+        data.put("costPerHead", allPayroll.isEmpty() ? 12.5
+                : allPayroll.stream().mapToDouble(p -> p.getActualAmount().doubleValue()).average().orElse(0) / 1000.0);
 
         return Result.success(data);
     }
